# DetectorSamples

./: .gitignore  CMakeLists.txt  DetectorSamples.pro  README.md  requirements.txt
Resource/: Configuration.xml
Resource/Models/SSD/: SafetyHelmet_SSD.caffemodel  SafetyHelmet_SSD.onnx  deploy.prototxt  deploy_Caffe2ONNX.prototxt  solver.prototxt  train.prototxt
Resource/Models/YOLOV3/: deploy.prototxt  deploy_Caffe2ONNX.prototxt  solver.prototxt  train.prototxt
Src/: Sample.cpp  Sample.h  main.cpp
Src/Detector/: DetectorInterface.cpp  DetectorInterface.h  DetectorSSD.cpp  DetectorSSD.h  DetectorYOLOV3.cpp  DetectorYOLOV3.h  DetectorYOLOV5.cpp  DetectorYOLOV5.h
Src/Utility/: CommonDefinition.h  CommonUtility.cpp  CommonUtility.h  Filesystem.cpp  Filesystem.h  SimpleLog.cpp  SimpleLog.h
